--- a/charts/todo-app/templates/todo-ingress.yaml
+++ b/charts/todo-app/templates/todo-ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   name: todo-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+  labels:
+    app: todo-app
 spec:
   rules:
     - http:
