--- a/charts/todo-app/templates/todo-secret.yaml
+++ b/charts/todo-app/templates/todo-secret.yaml
@@ -1,5 +1,4 @@
 {{- $globsecrets := .Files.Glob "secrets/*.yaml" -}}
-
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,9 +9,9 @@ stringData:
   {{ if $globsecrets }}
   {{ ($globsecrets).AsSecrets | indent 0 }}
   {{ end }}
-  POSTGRES_PASSWORD: {{ default "NONE" .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.PASSWORD }}
-  POSTGRES_DB: {{ default "NONE" .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.DB }}
-  POSTGRES_USER: {{ default "NONE" .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.USER }}
-  RABBITMQ_DEFAULT_USER: {{ default "NONE" .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.USER }}
-  RABBITMQ_DEFAULT_PASS: {{ default "NONE" .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.PASS }}
-  RABBITMQ_DEFAULT_URL: {{ default "NONE" .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.URL }}
+  POSTGRES_PASSWORD: {{ .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.PASSWORD }}
+  POSTGRES_DB: {{ .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.DB }}
+  POSTGRES_USER: {{ .Values.BACKEND.STATEFUL.POSTGRES.SECRETS.USER }}
+  RABBITMQ_DEFAULT_USER: {{ .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.USER }}
+  RABBITMQ_DEFAULT_PASS: {{ .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.PASS }}
+  RABBITMQ_DEFAULT_URL: {{ .Values.BACKEND.STATELESS.RABBITMQ.SECRETS.DEFAULT.URL }}
