--- a/charts/todo-app/templates/todo-api-gateway-deployment.yaml
+++ b/charts/todo-app/templates/todo-api-gateway-deployment.yaml
@@ -4,12 +4,13 @@ metadata:
   namespace: {{ template "todo-app.namespace" . }}
   name: todo-api-gateway
   labels:
+    app: todo-app
     todo-app-deployment: todo-api-gateway
 spec:
   replicas: {{ .Values.ROUTING.APIGATEWAY.REPLICAS }}
   selector:
-      matchLabels:
-        todo-app-pod: todo-api-gateway
+    matchLabels:
+      todo-app-pod: todo-api-gateway
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -22,19 +23,21 @@ spec:
     spec:
       restartPolicy: Always
       initContainers:
-      - name: init-rabbitmq
-        image: busybox
-        command: ['sh', '-c', 'until nslookup todo-rabbitmq; do echo waiting for RabbitMQ; sleep 2; done;']
+        - name: init-rabbitmq
+          image: busybox
+          command: ['sh', '-c', 'until nslookup todo-rabbitmq; do echo waiting for RabbitMQ; sleep 2; done;']
       containers:
-      - name: todo-api-gateway
-        imagePullPolicy: {{ .Values.ROUTING.APIGATEWAY.IMAGE.PULLPOLICY }}
-        image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-api-gateway:{{ .Values.ROUTING.APIGATEWAY.IMAGE.TAG }}
-        envFrom:
-          - configMapRef:
-              name: todo-config
-        ports:
-        - containerPort: {{ .Values.ROUTING.APIGATEWAY.PORT.TARGET }}
-        resources:
-          limits:
-            memory: {{ .Values.ROUTING.APIGATEWAY.MEMORY }}
+        - name: todo-api-gateway
+          imagePullPolicy: {{ .Values.ROUTING.APIGATEWAY.IMAGE.PULLPOLICY }}
+          image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-api-gateway:{{ .Values.ROUTING.APIGATEWAY.IMAGE.TAG }}
+          envFrom:
+            - configMapRef:
+                name: todo-config
+            - secretRef:
+                name: todo-secret
+          ports:
+            - containerPort: {{ .Values.ROUTING.APIGATEWAY.PORT.TARGET }}
+          resources:
+            limits:
+              memory: {{ .Values.ROUTING.APIGATEWAY.MEMORY }}
 
