--- a/charts/todo-app/templates/todo-proxy-service.yaml
+++ b/charts/todo-app/templates/todo-proxy-service.yaml
@@ -4,13 +4,14 @@ metadata:
   namespace: {{ template "todo-app.namespace" . }}
   name: todo-proxy
   labels:
+    app: todo-app
     todo-app-service: todo-proxy
 spec:
   type: LoadBalancer
   selector:
     todo-app-pod: todo-proxy
   ports:
-  - name: {{ .Values.ROUTING.PROXY.PORT.NAME }}
-    port: {{ .Values.ROUTING.PROXY.PORT.CLUSTER }}
-    targetPort: {{ .Values.ROUTING.PROXY.PORT.TARGET }}
+    - name: {{ .Values.ROUTING.PROXY.PORT.NAME }}
+      port: {{ .Values.ROUTING.PROXY.PORT.CLUSTER }}
+      targetPort: {{ .Values.ROUTING.PROXY.PORT.TARGET }}
 
