--- a/charts/todo-app/templates/todo-search-service-deployment.yaml
+++ b/charts/todo-app/templates/todo-search-service-deployment.yaml
@@ -4,12 +4,13 @@ metadata:
   namespace: {{ template "todo-app.namespace" . }}
   name: todo-search-service
   labels:
+    app: todo-app
     todo-app-deployment: todo-search-service
 spec:
   replicas: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.REPLICAS }}
   selector:
-      matchLabels:
-        todo-app-pod: todo-search-service
+    matchLabels:
+      todo-app-pod: todo-search-service
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -22,18 +23,25 @@ spec:
     spec:
       restartPolicy: Always
       initContainers:
-      - name: init-elastic
-        image: busybox
-        command: ['sh', '-c', 'until nslookup todo-elastic; do echo waiting for ElasticSearch; sleep 2; done;']
+        - name: init-elastic
+          image: busybox
+          command: ['sh', '-c', 'until nslookup todo-elastic; do echo waiting for ElasticSearch; sleep 2; done;']
+          envFrom:
+            - configMapRef:
+                name: todo-config
+            - secretRef:
+                name: todo-secret
       containers:
-      - name: todo-search-service
-        image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-search-service:{{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.IMAGE.TAG }}
-        imagePullPolicy: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.IMAGE.PULLPOLICY }}
-        envFrom:
-          - configMapRef:
-              name: todo-config
-        ports:
-        - containerPort: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.PORT.TARGET }}
-        resources:
-          limits:
-            memory: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.MEMORY }}
+        - name: todo-search-service
+          image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-search-service:{{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.IMAGE.TAG }}
+          imagePullPolicy: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.IMAGE.PULLPOLICY }}
+          envFrom:
+            - configMapRef:
+                name: todo-config
+            - secretRef:
+                name: todo-secret
+          ports:
+            - containerPort: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.PORT.TARGET }}
+          resources:
+            limits:
+              memory: {{ .Values.BACKEND.STATELESS.SEARCH.SERVICE.MEMORY }}
