--- a/charts/todo-app/templates/todo-storage-service-deployment.yaml
+++ b/charts/todo-app/templates/todo-storage-service-deployment.yaml
@@ -4,12 +4,13 @@ metadata:
   namespace: {{ template "todo-app.namespace" . }}
   name: todo-storage-service
   labels:
+    app: todo-app
     todo-app-deployment: todo-storage-service
 spec:
   replicas: {{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.REPLICAS }}
   selector:
-      matchLabels:
-        todo-app-pod: todo-storage-service
+    matchLabels:
+      todo-app-pod: todo-storage-service
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -22,20 +23,22 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-storage-service:{{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.IMAGE.TAG }}
-        imagePullPolicy: {{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.IMAGE.PULLPOLICY }}
-        name: todo-storage-service
-        envFrom:
-          - configMapRef:
-              name: todo-config
-        env:
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: todo-secret
-              key: POSTGRES_PASSWORD
-        ports:
-        - containerPort: {{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.PORT.TARGET }}
-        resources:
-          limits:
-            memory: "{{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.MEMORY }}"
+        - image: {{ .Values.VARS.DOCKER.HUB.ID }}/todo-storage-service:{{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.IMAGE.TAG }}
+          imagePullPolicy: {{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.IMAGE.PULLPOLICY }}
+          name: todo-storage-service
+          envFrom:
+            - configMapRef:
+                name: todo-config
+            - secretRef:
+                name: todo-secret
+          env:
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: todo-secret
+                  key: POSTGRES_PASSWORD
+          ports:
+            - containerPort: {{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.PORT.TARGET }}
+          resources:
+            limits:
+              memory: "{{ .Values.BACKEND.STATELESS.STORAGE.SERVICE.MEMORY }}"
